Fix header-right cut off on large screens

--- a/src/index.css
+++ b/src/index.css
@@ -338,6 +338,7 @@ body {
 }
 
 .header-right {
+  margin-top: 3%;
   margin-left: 12.5%;
   margin-bottom: 5%;
 }
